# lmi

./: .gitignore  .gitmodules  README.md  ROADMAP.md  pyproject.toml
.old/: README.md
.old/components/: __init__.py
examples/{{ cookiecutter.repo_name }}/: cookiecutter.json  pyproject.toml
lmi/: __init__.py  __main__.py  app.py  component.py  hooks.py
lmi/_internal/: interfaces.py
lmi/abstract/: human_interface.py  interactable.py  llm_interface.py  viewable.py
lmi/app/: app.py
lmi/apps/: calculator.py  terminal.py
lmi/components/: AbstractToggle.py  AbstractToggleList.py  Ad.py  Button.py  CheckList.py  Checkbox.py  Collection.py  ComboBox.py  Component.py  DESIGN.md  ListItem.py  MenuList.py  Option.py  OptionList.py  OrderedList.py  ProgressBar.py  Slider.py  Spinner.py  Stack.py  TODO  Text.py  UnorderedList.py  __init__.py  abstract_component.py  audio.py  button.py  clazz.py  component.py  description.py  flexbox.py  function.py  group.py  image.py  module.py  numbered_list.py  object.py  scrollbox.py  text.py  textbox.py  video.py
lmi/components1/: TODO
lmi/consts/: truncation.py
lmi/handlers/: __init__.py  advanced_keyboard_event_handler.py  click_event_handler.py  display_event_handler.py  drag_event_handler.py  drop_event_handler.py  event_handler.py  focus_event_handler.py  hover_event_handler.py  keyboard_event_handler.py  mouse_event_handler.py  reversible_event_handler.py  scroll_event_handler.py
lmi/misc/: truncation.py
lmi/peripherals/: base.py  keyboard.py  mouse.py
lmi/screens/: dialog.py  screen.py
lmi/tools/: pyobj_tool.py  tool.py  toolbox.py
lmi/utils/: event_target.py  interfaces.py  json_serializable.py  misc.py  name_generator.py  normalize.py  python.py  union.py
tensaface/: __main__.py  component.py
tensaface/_internal/: llm_interface.py
(+93 files in other folders)
