[tool.poetry]
name = "lmi"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inspect-mate-pp = "^0.0.4"
typingx = "^0.6.0"
pydantic = "^2.4.2"
langchain = "^0.0.335"
httpx = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
