[tool.poetry]
name = "tensaface"
version = "0.1.0"
description = ""
authors = [
    "TensaCo <hello@tensaco.ai>",
    "Jacob Valdez <jacob.valdez@tensaco.ai>",
]
readme = "README.md"
license = "MIT"
homepage = "https://tensaco.ai"
repository = "https://github.com/TensaCo/tensaface"
keywords = ["tensaface", "llm", "interface", "api"]
packages = [{ include = "tensaface", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
inspect-mate-pp = "^0.0.4"
typingx = "^0.6.0"
pydantic = "^2.4.2"
langchain = "^0.0.335"
httpx = "^0.25.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
